<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_product"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/title_detail_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_product"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_product" />

        <LinearLayout
            android:id="@+id/layout_detail_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="@+id/title_detail_product"
            app:layout_constraintStart_toStartOf="@+id/title_detail_product"
            app:layout_constraintTop_toBottomOf="@+id/title_detail_product">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title_name_product"
                    android:text="@string/name_product"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/name_product"
                    android:text="@string/name_product"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title_category_product"
                    android:text="@string/category_product"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/category_product"
                    android:text="@string/category_product"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title_price_product"
                    android:text="@string/price_product"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/price_product"
                    tools:text="$100"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/title_description_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description_product"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/layout_detail_product"
            app:layout_constraintStart_toStartOf="@+id/layout_detail_product"
            app:layout_constraintTop_toBottomOf="@+id/layout_detail_product" />

        <TextView
            android:id="@+id/description_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description_product"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            app:layout_constraintEnd_toEndOf="@+id/title_description_product"
            app:layout_constraintStart_toStartOf="@+id/title_description_product"
            app:layout_constraintTop_toBottomOf="@+id/title_description_product" />

        <Button
            android:id="@+id/btn_add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>