<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.checkout.CheckoutActivity">

        <TextView
            android:id="@+id/title_shopping_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_shopping"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/title_shopping_user"
            app:layout_constraintStart_toStartOf="@+id/title_shopping_user"
            app:layout_constraintTop_toBottomOf="@+id/title_shopping_user" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_confirm"
            app:layout_constraintTop_toBottomOf="@+id/title_shopping_user"
            tools:layout_editor_absoluteX="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="400dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_shopping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/rv_shopping" />

                <TextView
                    android:id="@+id/title_total_all_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@+id/rv_shopping"
                    app:layout_constraintTop_toBottomOf="@+id/view2" />

                <TextView
                    android:id="@+id/total_all_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_100_00"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/title_total_all_price"
                    app:layout_constraintEnd_toEndOf="@+id/rv_shopping"
                    app:layout_constraintTop_toTopOf="@+id/title_total_all_price" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>